Created Exercise and Workout model classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=workoutAPI
+spring.datasource.url= jdbc:postgresql://localhost:5432/workout-api
+spring.datasource.username=postgres
+spring.datasource.password=Postgree00Senha!
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
